--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img src="images\brownrafting.jpeg.png" alt ="Dry Oar Logo">
+            <img src="images/brownrafting.jpeg.png" alt ="Dry Oar Logo">
 
         </a>
         <nav>
@@ -21,7 +21,7 @@
     </header>
     <div id="hero"> 
         <div id="hero-box">
-            <img id="heor-img" scr="images/hero.ping" alt="people enjoying rafting">  
+            <img id="heor-img" src="images/hero.ping" alt="people enjoying rafting">  
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -48,11 +48,11 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <img calss="mountains" src="images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class="join" herf="rivers.html">Join Us</a>
+            <a class="join" href="rivers.html">Join Us</a>
     </section>
     </main>
     <footer>
@@ -71,9 +71,5 @@
             </a>
         </div>
     </footer>
-    
-
-
-
 </body>
 </html>
