--- a/2023 VS noob1.html
+++ b/2023 VS noob1.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/style.css">
     <meta charset="en">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name='viewport' content="width=decice-width, initial-scale=1.0">
     <title> All About Me </title>
 </head>
 <body>
-    <h1> About Me </h1>
-    <img alt="It is me in my room .. in night close" src="images/PJ_ME.jpg">
-    <h2> Fuad J Torres </h2>
-    <p> My dads dad is palestine his mom is mexican.
-        My mom is mix chex, german, irland, and genral mix europe.
-        That puts me at I dont know where but I have red hair so thats cool.
-    </p>
-    <P>Also I like to think exspeshualy when I am learning things or vewing things.
-        problem is at a physical classrom I cant stand up an get pasionet, so i go online.
-        problem with that is it is dificult to read for me .. but thats life.
-    </P>
+    <header>
+        <h1 class="headings"> About Me </h1>
+        <img alt="It is me in my room .. in night close" src="images/PJ_ME.jpg">
+    </header>
+    <main>
+        <h2 class="headings"> Fuad J Torres </h2>
+        <p> My dads dad is palestine his mom is mexican.
+            My mom is mix chex, german, irland, and genral mix europe.
+            That puts me at I dont know where but I have red hair so thats cool.
+        </p>
+        <P> Also I like to think exspeshualy when I am learning things or vewing things.
+            problem is at a physical classrom I cant stand up an get pasionet, so i go online.
+            problem with that is it is dificult to read for me .. but thats life.
+        </P>
+    </main>
+
 </body>
 </html>
 
