--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,7 +11,7 @@
     <div id="content">
     <header>
         <a id="logo_link" href="index.html">
-            <img src="images/brownrafting.jpg.png" alt ="Dry Oar Logo">
+            <img src="images/brownrafting.jpeg" alt ="Dry Oar Logo">
 
         </a>
         <nav>
@@ -23,7 +23,7 @@
     </header>
     <div id="hero"> 
         <div id="hero-box">
-            <img id="heor-img" src="images/hero.ping" alt="people enjoying rafting">  
+            <img id="heor-img" src="images/hero.png" alt="people enjoying rafting">  
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
