--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Home page</title>
 </head>
+<!-- next -->
 <body>
     <div id="content">
     <header>
@@ -21,6 +22,7 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
+    <!-- next -->
     <div id="hero"> 
         <div id="hero-box">
             <img id="heor-img" src="images/hero.png" alt="people enjoying rafting">  
@@ -58,6 +60,7 @@
             <a class="join" href="rivers.html">Join Us</a>
     </section>
     </main>
+    <!-- next -->
     <footer>
         <p> Dry Oar &copy; 2023 - Fuad J Torres </p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
