--- a/2023 VS noob1.html
+++ b/2023 VS noob1.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1 class="headings"> About Me </h1>
-        <img alt="It is me in my room .. in night close" src="images/PJ_ME.jpg">
+        <img alt="It is me in my room .. in night close" src="images/unnamed.jpg">
     </header>
     <main>
         <h2 class="headings"> Fuad J Torres </h2>
