--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -23,7 +23,7 @@
     <p> To give families Life changing exsperiances with rafting </p>
     
     <p> We bealive that families are the most important part of 
-      life and making memories sets familes up to be win. SO 
+      life and making memories sets familes up to win. SO 
       here at White Water Rafting Company we plan to give amazing 
       family bonding experinces for cheap. 
       </p>
