some cleaning up

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css">
+    <!-- <link rel="stylesheet" href="styles/style.css"> for now -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Home page</title>
+    <title>Whitewater Rafting Home Page</title>
 </head>
 <!-- next -->
 <body>
-    <div id="content">
+    <div id="content"> <!-- This div gose through the entirety of the body-->
     <header>
         <a id="logo_link" href="index.html">
-            <img src="images/brownrafting.jpeg" alt ="Dry Oar Logo">
-
+            <img src="images/brownrafting.jpeg" alt ="Dry Oar Logo"> 
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -58,7 +57,7 @@
             <h2>More Than The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
             <a class="join" href="rivers.html">Join Us</a>
-    </section>
+        </section>
     </main>
     <!-- next -->
     <footer>
@@ -77,6 +76,6 @@
             </a>
         </div>
     </footer>
-    </div>
+    </div> <!-- this is that begining div-->
 </body>
 </html>
