--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,42 +9,47 @@
 </head>
 
 <body>
+
   <header>
     <h1> The Rafting Exsperince of a Families Lifetime</h1>
     <h2> Fuad J Torres </h2>
-    <h2>WDD 130 - (dont know) </h2>
+    <h2> WDD 130 - B4 </h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
+  
+  <!-- ------------------------Steps 2-5------------------------------ -->
   <main>
-    <!-- ------------------------Steps 2-5------------------------------ -->
+
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
     <p> To give families Life changing exsperiances with rafting </p>
     
-    <p> We bealive that families are the most important part of 
+
+    <p> 
+      We bealive that families are the most important part of 
       life and making memories sets familes up to win. SO 
       here at White Water Rafting Company we plan to give amazing 
       family bonding experinces for cheap. 
-      </p>
+    </p>
 
-      <p>
-        This sight is to build revenue for this new buisness and make it
-        easer for people to get set up on subscritions or passes. 
-      </p>
+    <p>
+      This sight is to build revenue for this new buisness and make it
+      easer for people to get set up on subscritions or passes. 
+    </p>
 
     <h3>Audience</h3>
-    <p> This sight may posibly on phones but mostly on computeras.
-        parints, schools, camping groups, and generly any
-        group seeking family activity.  
+    <p> 
+      This sight may posibly on phones but mostly on computeras.
+      parints, schools, camping groups, and generly any
+      group seeking family activity.  
     </p>
     
 
     <hr />
     <h2>Branding</h2>
     <h3> White Water Rafting Company  </h3>
-    <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/brownrafting.jpeg" alt="Logo image" />
+    <img src="images/brownrafting.jpeg" alt="Logo image" /> <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
     <hr />
     <h2>Style Guide</h2>
 
