--- a/church_sigth/church.html
+++ b/church_sigth/church.html
@@ -25,7 +25,7 @@
         </p>
       </main>
       <footer>
-        <p>My First Web Page 20XX &copy</p>
+        <p>My First Web Page 2023 &copy</p>
       </footer>
 </body>
 </html>
