ok did it .. mostly

--- a/wo4_challege/index.html
+++ b/wo4_challege/index.html
@@ -10,17 +10,19 @@
     <nav>
         <h1>Education</h1>
     </nav>
-    <div id="exclame">
-        <p>Education is the difference between wishing you could help others & being able to help others</p>
-        <h1>---President Nelson</h1>
-    </div>
+    <section id="exl">
+        <p>Education is the difference between wishing you could help others & being able to help them</p>
+        <h4><b>- - -</b>President Nelson</h4>
+    </section>
     <div id="list">
+       <div>
        <ol>
         <li>Faith in the Lord Jesus Christ</li>
         <li>Repentance</li>
         <li>Baptism by the immersion for the remission of sins</li>
         <li>Laying on of hands for the gift of the Holy Ghost</li>
        </ol>
+       </div>
     </div>
     <div id="image">
         <img src="images/russell_nelson_official_portrait_2018.jpeg" alt="The prophet Russell M Nelson">
@@ -29,7 +31,7 @@
         <p>"Becuase of the Saviors Atonment, His gosple provides an invitation to keep changing, growing, and becoming more pure."</p>
     </div>
     <footer>
-        <h6>Russell M. Nelson</h6>
+        <h4>Russell M. Nelson</h4>
         <p>President of the Church of Jesus Christ of Latter-day Saints</p>
     </footer>
 </body>
