--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <link rel="stylesheet" href="styles/style.css"> for now -->
+    <link rel="stylesheet" href="styles/style.css"> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -65,7 +65,7 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com" target="_blank">
+            <a href="https://facebook.com" target="_blank"> <!-- target="_blank"-->>
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
