ok ok what hapwn

--- a/wo5_chalige/chaling.html
+++ b/wo5_chalige/chaling.html
@@ -10,12 +10,12 @@
     <div id="hero">
         <img src="images/w05_circles.jpg" alt="A Web Designer and Frontend Developer program by Thomas DeSantos">
     </div>
-    <div id="3img">
+    <div id="threeimg">
         <img src="images/w05_ice_image_desk.jpg" alt="a picutre with a cluterd desk">
         <img src="images/w05_ice_image_graphic.png" alt="a gray sphire opened up with a blue sphire inside">
         <img src="images/w05_ice_image_person.jpg" alt="a male with a gray shrit looking up wondering with his hand in a fist under his chine">
     </div>
-    <div>
+    <div id="hfoot">
         <h6>WO5 image</h6>
     </div>
 </body>
