--- a/wo5_chalige/chaling.html
+++ b/wo5_chalige/chaling.html
@@ -16,7 +16,7 @@
         <img src="images/w05_ice_image_person.jpg" alt="a male with a gray shrit looking up wondering with his hand in a fist under his chine">
     </div>
     <div id="hfoot">
-        <h6>WO5 image</h6>
+        <p>W05 image</p>
     </div>
 </body>
 </html>
