its not perfect but i did it

--- a/wo6_challange/cherry.html
+++ b/wo6_challange/cherry.html
@@ -7,9 +7,9 @@
     <title>wo6 challeng</title>
 </head>
 <body>
-    <div id="heroimg">
-        <img src="images/w06_cherries.png" alt="a cherry">
-        <div style="background-color: grey;"></div>
+    <div id="hero">
+        <img src="images/w06_cherries.png" alt="two cherries with small waterdropes on them conected by a life">
+        <aside style="background-color: grey;"></aside>
         <h1>Tarts & Sweets</h1>
         <h2 style="color: darkred;">Cherries</h2>
     </div>
