--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -138,9 +138,10 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Gallery</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/wireFrame01.png" alt="im sorry that you cant see it">
+  
   </main>
 </body>
 
