--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,7 +12,7 @@
     <div id="content"> <!-- This div gose through the entirety of the body-->
     <header>
         <a id="logo_link" href="index.html">
-            <img src="images/brownrafting.jpeg" alt ="Dry Oar Logo"> 
+            <img class="logo" src="images/brownrafting.jpeg" alt ="Dry Oar Logo"> 
         </a>
         <nav>
             <a href="index.html">Home</a>
