--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="galory.html">Galory</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -24,7 +24,7 @@
     <!-- next -->
     <div id="hero"> 
         <div id="hero-box">
-            <img id="heor-img" src="images/hero.png" alt="people enjoying rafting">  
+            <img id="hero-img" src="images/hero.png" alt="people enjoying rafting">  
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
