--- a/wwr/index.html
+++ b/wwr/index.html
@@ -69,7 +69,7 @@
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img src="images/Xtwitter.jpg" alt="twitter/X icon">
             </a>
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
