--- a/wwr/galory.html
+++ b/wwr/galory.html
@@ -153,8 +153,8 @@
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
+              <img src="images/Xtwitter.jpg" alt="twitter icon">
+          </a>
             <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
